2002-09-09  Markus Germeier  <mager@tzi.de>

	* mpio_tool/mpiosh.c: 
	  (mpiosh_cmd_mput):
	  (mpiosh_cmd_mget):
		  make info texts consistent with get and put
	* libmpio/mpio.c (mpio_init_internal): 
	  fixed max_clusters for internal memory with more
	  then one chip
	* libmpio/fat.c (mpio_fatentry_hw2entry): added function
	* libmpio/fat.c (mpio_fatentry_entry2hw): added function
	* libmpio/fat.c: 
	  fixed support for MPIOs with more than one internal chip
	  (hopefully, someone please test this)

2002-09-08  Markus Germeier  <mager@tzi.de>

	* mpio_tool/mpiosh.c: 
	  (mpiosh_cmd_mput): fixed regex handling
	  (mpiosh_cmd_mget): fixed regex handling
	* regex for mput/mget does now work but uses "hard"
	  regular expressions instead of shell-like regex, e.g.:
	    "^0.*\.mp3$" ("hard" regular expression) 
	    "0*.mp3"     (shell-like)x

2002-09-04  Andreas Buesching  <crunchy@tzi.de>

	* mpio_tool/mpiosh.c (mpiosh_cmd_mput): 
	added command mput. The arguments can be extended regular
	expressions. UNTESTED!
	(mpiosh_cmd_ldir): removed compiler warnings
	(mpiosh_cmd_mget): added command mget. The arguments can be
	extended regular expressions. UNTESTED!
	(mpiosh_cmd_help): updated help text

2002-09-03  Markus Germeier  <mager@tzi.de>

	* first part of "design" fixes
	* libmpio: 
	  - introduced mpio_fatentry_t
	  - reading support changed to mpio_fatentry_t
	  - writing and deleting deactivated
	    (this simply can't work right now)

2002-09-03  Yuji Touya  <salmoon@users.sourceforge.net>

	* add mkmpiodev script to create device file
	* README: add explanation to get started

2002-09-03  Markus Germeier  <mager@tzi.de>

	* libmpio/*: various "little" code cleanups

2002-09-01  Andreas Buesching  <crunchy@tzi.de>

	* mpio_tool/mpiosh.c: add commands lcd and ldir
	(mpiosh_cmd_dump): fixed a stupid bug
	(mpiosh_cmd_ldir): implemented the command ldir
	(mpiosh_cmd_lcd): implemented the command lcd

2002-08-22  Andreas Buesching  <crunchy@tzi.de>