@@ -1,5 +1,16 @@
 2002-09-09  Markus Germeier  <mager@tzi.de>
 
+	* libmpio/io.c (cluster2block): 
+	  fixed cluster to block mapping for 32MB SmartMedia cards
+	* libmpio/io.c (mpio_io_block_read, mpio_io_sector_read): 
+	  added debug output in case of ECC error
+	* libmpio/mpio.c (mpio_memory_free): 
+	  fixed segmentation violation if no SM card is inserted
+	* libmpio/mpio.c (mpio_get_info): 
+	  *really* fixed the problem if no SM card is inserted
+	
+2002-09-09  Markus Germeier  <mager@tzi.de>
+
 	* mpio_tool/mpiosh.c: 
 	  (mpiosh_cmd_mput):
 	  (mpiosh_cmd_mget):
@@ -21,7 +32,7 @@
 	* regex for mput/mget does now work but uses "hard"
 	  regular expressions instead of shell-like regex, e.g.:
 	    "^0.*\.mp3$" ("hard" regular expression) 
-	    "0*.mp3"     (shell-like)x
+	    "0*.mp3"     (shell-like)
 
 2002-09-04  Andreas Buesching  <crunchy@tzi.de>
 
